# Smart-Expense-Categorization-System

./: README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/models/: transactions.py
app/services/: categorization.py
app/store/: memory.py
docs/: ARCHITECTURE.md  PROJECT_SPEC.md  RUNBOOK.md
tests/: test_api.py
