[project]
name = "smart-expense-categorization"
version = "0.1.0"
description = "Smart Expense Categorization System backend API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Smart Expense Team" }]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
